--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,34 @@
-===============
-PYTHON CACHE
-===============
-
-pycache/
+# Byte-compiled / optimized / DLL files
+__pycache__/
 *.py[cod]
 *$py.class
 
-===============
-VIRTUAL ENV
-===============
+# C extensions
+*.so
 
+# Virtual environments
 venv/
 env/
 .venv/
-ENV/
+.env/
 
-===============
-IDE / EDITOR
-===============
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
 
+# IDE / editor files
 .vscode/
 .idea/
+*.sublime-project
+*.sublime-workspace
 
-===============
-SYSTEM FILES
-===============
-
+# OS files
 .DS_Store
 Thumbs.db
 
-===============
-LOG FILES
-===============
-
+# Logs
 *.log
+
+# Env / secret files
+.env
